Refactor Footer Component to utilize SASS & operator

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -20,7 +20,7 @@
         align-items: flex-start;
     }
 
-    .copyrightNotice{
+    & p{
         @include text;
         
         margin-top: min(max(calc(0.45*10vw), 10vh), 100px);
