--- a/src/Components/Header/Navigation/Dropdown/Dropdown.module.scss
+++ b/src/Components/Header/Navigation/Dropdown/Dropdown.module.scss
@@ -26,7 +26,7 @@
             background-color: $theme-background-hover;
         }
 
-        .dropdownText{
+        & p{
             @include text;
         }
     }
