Implemented Search Functionality

--- a/src/Components/Header/Navigation/SearchResults/SearchResults.module.scss
+++ b/src/Components/Header/Navigation/SearchResults/SearchResults.module.scss
@@ -3,6 +3,8 @@
 
 
 .searchResults{
+    @include centered-column;
+
     width: 74.4vw;
     background-color: $theme-background;
     color: $light-text-color;
@@ -13,12 +15,11 @@
     border-radius: min(max(calc(0.45*1vw), 1vh), 10px);
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-    display: none;
-    flex-direction: column;
-    justify-content: baseline;
     overflow: hidden;
 
     .resultBox{
+        @include baseline-row;
+
         width: 100%;
         height: min(max(calc(0.45*7vw), 7vh), 70px);
         padding-left: min(max(calc(0.45*5vw), 5vh), 50px);
