--- a/src/Components/Main/News/NewsArticle/NewsArticle.module.scss
+++ b/src/Components/Main/News/NewsArticle/NewsArticle.module.scss
@@ -24,6 +24,8 @@
         }
 
         & figcaption{
+            @include baseline-row;
+            
             position: absolute;
             bottom: 0px;
             width: 100%;
