--- a/src/Components/Main/Homepage/Promotions/Promotions.module.scss
+++ b/src/Components/Main/Homepage/Promotions/Promotions.module.scss
@@ -38,9 +38,9 @@
         overflow: hidden;    
 
         .promotionCard{
-            min-width: min(max(calc(0.45*56vw), 56vh), 565px);
-            max-width: min(max(calc(0.45*56vw), 56vh), 565px);
-            min-height: min(max(calc(0.45*35vw), 35vh), 350px);
+            min-width: min(calc(0.45*56.5vw), 565px);
+            max-width: min(calc(0.45*56.5vw), 565px);
+            height: min(max(calc(0.45*35vw), 35vh), 350px);
             background-color: #787878;
             margin: 0 min(max(calc(0.45*3vw), 3vh), 30px) 0 0;
             border-radius: min(max(calc(0.45*5vw), 5vh), 50px);
