Fix gap offset issue

--- a/src/Components/Main/Homepage/Promotions/Promotions.module.scss
+++ b/src/Components/Main/Homepage/Promotions/Promotions.module.scss
@@ -40,7 +40,7 @@
             min-width: min(calc(0.45*56.5vw), 565px);
             max-width: min(calc(0.45*56.5vw), 565px);
             background-color: #787878;
-            margin: 0 min(max(calc(0.45*3vw), 3vh), 30px) 0 0;
+            margin: 0 min(calc(0.45*3vw), 30px) 0 0;
             border-radius: min(max(calc(0.45*5vw), 5vh), 50px);
 
             .marginedCard{
